Fix java version