@@ -54,7 +54,7 @@ public class MinerRenderer implements BlockEntityRenderer<MinerBlockEntity> {
 
     private float getZShift(long gameTime, int delay) {
         float shift = ((gameTime + delay) % 1000) / 200f - 0.5f;
-        return Math.clamp(shift, -0.5f, 1.5f);
+        return Math.min(Math.max(shift, -0.5f), 1.5f);
     }
 
     private void drawBlock(PoseStack pose, ItemRenderer itemRenderer, ItemStack stack,
